@@ -5,6 +5,8 @@ Trunk (Unreleased)
   INCOMPATIBLE CHANGES
 
   NEW FEATURES
+   FALCON-1242 Search UI test for entity upload button (Namit Maheshwari)
+
    FALCON-1222 Feed Wizard multiple tests (Namit Maheshwari)
 
    FALCON-1229 Tests for instance page on SearchUI (Ruslan Ostafiychuk)
